--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
+<li><a href="/cv/Dina_Mistry_CV_May_2018.pdf">CV</a></li>
 <li><a href="/blog">Blog</a></li>
 </ul>
     </nav>
@@ -25,8 +25,8 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href="mailto:dina.c.mistry@gmail.com">email</a></li>
+   <li><a href="https://github.com/dinacmistry">github.com/dinacmistry</a></li>
    </ul>
   </footer>
   </body>
