--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,19 @@ body { margin: 60px auto; width: 70%; }
 a { text-decoration: none; color: #999; }
 a:hover { text-decoration: underline; }
 
-p, ul { font-size: 1.5em; line-height: 1.4em; color: #333; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
+p, ul { font-size: 1.5em; line-height: 1.4em; color: #333; 
+	/*font-family: 'Helvetica', 'Arial', 'Sans-Serif'; */
+	font-family: 'Helvetica', 'Sans-Serif';
+}
 
-h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
+h1, h2, h3, h4  { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
+h5 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.2em; color:#333; font-weight: 100}
+h6 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.5em; color:#333; font-weight: 400}
+
 
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
