--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body { margin: 60px auto; width: 70%; }
 
 a { text-decoration: none; color: #999; }
+/*a { text-decoration: none; color: #0099cc; }*/
 a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1.5em; line-height: 1.4em; color: #333; 
@@ -15,12 +16,15 @@ h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
 h5 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.2em; color:#333; font-weight: 100}
 h6 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.5em; color:#333; font-weight: 400}
+h7 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.5em; color:#333; font-weight: 400, text-decoration: none; color: #0099cc; }
+h7:hover {text-decoration: underline; }
 
 
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
 footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
+/*footer { border-top: 1px solid #0099cc; font-size: .8em; }*/
 
 /* Blog */
 ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
