--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
 <li><a href="/">Home</a></li>
 <li><a href="/about">About</a></li>
 <li><a href="/cv/Dina_Mistry_CV_May_2018.pdf">CV</a></li>
-<li><a href="/blog">Blog</a></li>
+<!-- <li><a href="/blog">Blog</a></li> -->
+<li><a href="/publications">Publications</a></li>
 </ul>
     </nav>
 <div class="container">
