--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,12 @@ h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
 h5 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.2em; color:#333; font-weight: 100}
-h6 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.5em; color:#333; font-weight: 400}
-h7 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.5em; color:#333; font-weight: 400, text-decoration: none; color: #0099cc; }
-h7:hover {text-decoration: underline; }
+h6 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.4em; color:#333; font-weight: 400}
+
+h7 { text-decoration: none; color: #0099cc; }
+/*a { text-decoration: none; color: #0099cc; }*/
+h7:hover { text-decoration: underline; }
+
 
 
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
