--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,14 @@ p, ul { font-size: 1.5em; line-height: 1.4em; color: #333;
 h1, h2, h3, h4  { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
-h3 { font-size: 2.3em; }
-h4 { font-size: 1.9em; }
-h5 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.2em; color:#333; font-weight: 100}
-h6 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.4em; color:#333; font-weight: 400}
+/*h3 { font-size: 2.3em; }*/
+h3 { font-size: 1.9em; }
+h4 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.2em; color:#333; font-weight: 100}
+h5 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.4em; color:#333; font-weight: 400}
 
-h7 { text-decoration: none; color: #0099cc; }
+h6 { text-decoration: none; color: #0099cc; }
 /*a { text-decoration: none; color: #0099cc; }*/
-h7:hover { text-decoration: underline; }
+h6:hover { text-decoration: underline; }
 
 
 
