--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ h2 { font-size: 2.7em; }
 h3 { font-size: 1.9em; }
 h4 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.2em; color:#333; font-weight: 100}
 h5 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.4em; color:#333; font-weight: 400}
-
+h6 {font-family: 'Helvetica', 'Sans-Serif'; font-size:  1.4em; color:#333; font-weight: 400}
 h6 { text-decoration: none; color: #0099cc; }
 /*a { text-decoration: none; color: #0099cc; }*/
 h6:hover { text-decoration: underline; }
