--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
 <li><a href="/about">About</a></li>
 <li><a href="/cv/Dina_Mistry_CV_May_2018.pdf">CV</a></li>
 <!-- <li><a href="/blog">Blog</a></li> -->
+<li><a href="/research">Research</a></li>
 <li><a href="/publications">Publications</a></li>
+<li><a href="/visualizations">Visualizations</a></li>
 </ul>
     </nav>
 <div class="container">
