--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="/about">About</a></li>
-<li><a href="/cv/Dina_Mistry_CV_2020.pdf">CV</a></li>
+<li><a href="/cv/DinaMistry_CV_2020.pdf">CV</a></li>
 <!-- <li><a href="/blog">Blog</a></li> -->
 <li><a href="/research">Research</a></li>
 <li><a href="/publications">Publications</a></li>
