--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }} | {{ page.title }}</title>
-  <meta name="description" content="Homepage of Martin Saveski">
-  <meta name="author" content="Martin Saveski">
+  <meta name="description" content="Homepage of Dina Mistry">
+  <meta name="author" content="Dina Mistry">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
