--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,8 +98,9 @@
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#bio" | prepend: site.baseurl }}>Bio</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#publications" | prepend: site.baseurl }}>Publications</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#projects" | prepend: site.baseurl }}>Projects</a></li>
+          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#service" | prepend: site.baseurl }}>Leadership & Service</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Vita</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#performances" | prepend: site.baseurl }}>Performances</a></li>
+          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#performances" | prepend: site.baseurl }}>Personal</a></li>
         </ul>
       </div>
     </nav>
