--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,6 +83,10 @@
                 <i class="fa fa-github" aria-hidden="true"></i>
               </span>
 
+              <span onclick="window.open('{{ site.data.main_info.github_2 }}')" style="cursor: pointer">
+                <i class="fa fa-github-square" aria-hidden="true"></i>
+              </span>
+
               <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
                 <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
               </span>
@@ -99,7 +103,7 @@
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#publications" | prepend: site.baseurl }}>Publications</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#projects" | prepend: site.baseurl }}>Projects</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#service" | prepend: site.baseurl }}>Leadership & Service</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Vita</a></li>
+          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Curriculum Vitæ</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#performances" | prepend: site.baseurl }}>Personal</a></li>
         </ul>
       </div>
